name:                servant-ekg
version:             0.1.0.0
synopsis:            Helpers for using ekg with servant
description:         Helpers for using ekg with servant
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@lists.anchor.net.au>
maintainer:          Anchor Engineering <engineering@lists.anchor.net.au>
category:            System
build-type:          Simple
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/anchor/servant-ekg.git

library
  exposed-modules:     Servant.Ekg
  hs-source-dirs:      lib
  build-depends:       base >=4.7 && <4.9
                     , ekg-core
                     , servant >=0.2 && <0.3
                     , http-types
                     , text
                     , time
                     , unordered-containers
                     , wai
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: test.hs
  build-depends:      base == 4.*
                    , aeson
                    , ekg
                    , ekg-core
                    , servant-ekg
                    , servant-server
                    , text
                    , wai
                    , warp
